# dns-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dns_mcp/: __init__.py  __main__.py  server.py
